rust/mlt-core/tests/snapshots/dump_serde__a_data_blob_region_serializes_its_stream_metadata_as_display_strings.snap
---
source: mlt-core/tests/dump_serde.rs
expression: json(region)
---
{
  "offset": 23,
  "len": 1,
  "depth": 3,
  "label": "data",
  "value": null,
  "bits": [],
  "kind": "dataBlob",
  "container": false,
  "blob": {
    "streamType": "length[var-binary]",
    "logical": "int/none",
    "physical": "varint",
    "numValues": 1,
    "hint": {
      "kind": "geometryType"
    }
  }
}
