rust/mlt-core/tests/snapshots/dump_serde__an_alp_hint_serializes_its_parameters_beside_its_tag.snap
---
source: mlt-core/tests/dump_serde.rs
expression: json(region)
---
{
  "offset": 38,
  "len": 7,
  "depth": 3,
  "label": "data",
  "value": null,
  "bits": [],
  "kind": "dataBlob",
  "container": false,
  "blob": {
    "streamType": "data",
    "logical": "float/alp",
    "physical": "varint",
    "numValues": 4,
    "hint": {
      "kind": "alp",
      "e": 2,
      "f": 0,
      "base": -225
    }
  }
}
